Main page is typeseted

--- a/index.html
+++ b/index.html
@@ -16,7 +16,182 @@
     <link rel="stylesheet" href="css/styles.min.css">
   </head>
   <body>
-    <div class="wrapper"></div>
+    <div class="wrapper">
+      <section id="main">
+        <div class="container"><img class="main-logo" src="img/logo-main.svg" alt="Логотип"/>
+          <h1 class="main-title"><span>МИССИЯ АНО РЦ «КЛЕВЕР»</span>РАЗВИВАЯ ВЫСШИЕ ПСИХИЧЕСКИЕ ФУНКЦИИ У ДЕТЕЙ И МОЛОДЕЖИ, СОЗДАВАТЬ ОСНОВУ ДЛЯ БУДУЩЕГО</h1>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)"/>
+                <p class="item-text">Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»"/>
+                <p class="item-text">Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="target">
+        <div class="container">
+          <div class="target-title"><img class="target-title-img" src="img/icons/title-icon-white.svg" alt="Организация создана с целью развития интеллектуальных, коммуникативных и творческих способностей детей и молодежи, развития гражданского общества"/>
+            <h3>Организация создана с целью развития интеллектуальных, коммуникативных и творческих способностей детей и молодежи, развития гражданского общества</h3>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады"/>
+                <p class="item-text">проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников"/>
+                <p class="item-text">осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи"/>
+                <p class="item-text">оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников"/>
+                <p class="item-text">организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="for">
+        <div class="container">
+          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-grey.svg"/>
+            <h3>БЛАГОПОЛУЧАТЕЛИ</h3>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Дети и молодые люди в возрасте от 15 – до 35 лет"/>
+                <p class="item-text">Дети и молодые люди в возрасте от 15 – до 35 лет</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Сотрудники организаций некоммерческого сектора"/>
+                <p class="item-text">Сотрудники организаций некоммерческого сектора</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="projects">
+        <div class="container">
+          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-blue.svg"/>
+            <h3>ПРОЕКТЫ</h3>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля."/>
+                <h4 class="item-title">CLEVER</h4>
+                <p class="item-text">Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи."/>
+                <h4 class="item-title">АЗБУКА ПУБЛИЧНЫХ КОММУНИКАЦИЙ</h4>
+                <p class="item-text">Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности."/>
+                <h4 class="item-title">«РАДОВАТЬСЯ И РАДОВАТЬ ДРУГИХ»</h4>
+                <p class="item-text">Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности.</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей."/>
+                <h4 class="item-title">«ФАНДРАЙЗИНГ НА КАБЛУЧКАХ»</h4>
+                <p class="item-text">Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="founders">
+        <div class="container">
+          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-grey.svg"/>
+            <h3>УЧРЕДИТЕЛИ</h3>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="founder"><img class="founder-img" src="img/images/marfa.png" alt="Марфа Мудрова"/>
+                <h4 class="founder-title">Марфа Мудрова</h4>
+                <p class="founder-text">директор, <br>руководитель проекта CLEVER</p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="founder"><img class="founder-img" src="img/images/ilya.png" alt="Илья Мясников"/>
+                <h4 class="founder-title">Илья Мясников</h4>
+                <p class="founder-text">продюсер, руководитель проекта АЗБУКА ПУБЛИЧНЫХ КОММУНИКАЦИЙ</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="mail">
+        <div class="container">
+          <div class="general-title general-title-white"><img class="general-title-img" src="img/icons/title-icon-white.svg"/>
+            <h3>МЫ ВСЕГДА ОТКРЫТЫ ДЛЯ СОТРУДНИЧЕСТВА И ИНТЕРЕСНЫХ ПРЕДЛОЖЕНИЙ</h3>
+          </div>
+          <p class="mail-text">Задайте интересующие вопросы <br>и мы свяжемся в ближайшее время</p>
+          <div class="form">
+            <form class="form" action="" method="POST">
+              <div class="radios">
+                <div class="radio">
+                  <input name="radio" id="radio-1" type="radio" value="">
+                  <label class="radio-label" for="radio-1">Сlever</label>
+                </div>
+                <div class="radio">
+                  <input name="radio" id="radio-2" type="radio" value="">
+                  <label class="radio-label" for="radio-2">Азбука публичных коммуникаций</label>
+                </div>
+                <div class="radio">
+                  <input name="radio" id="radio-3" type="radio" value="">
+                  <label class="radio-label" for="radio-3">Радоваться и радовать других</label>
+                </div>
+                <div class="radio">
+                  <input name="radio" id="radio-4" type="radio" value="">
+                  <label class="radio-label" for="radio-4">Фандрайзинг на&nbsp;каблучках</label>
+                </div>
+                <div class="radio">
+                  <input name="radio" id="radio-5" type="radio" value="">
+                  <label class="radio-label" for="radio-5">Другое</label>
+                </div>
+              </div>
+              <div class="inputs">
+                <input class="input name" type="text" name="name" value="" placeholder="Ваше имя">
+                <input class="input email" type="text" name="email" value="" placeholder="e-mail">
+                <input class="input tel" type="tel" name="tel" value="" placeholder="Телефон ">
+              </div>
+              <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
+              <div class="submits">
+                <div class="checking">
+                  <input class="check" type="checkbox" id="check-2">
+                  <label class="check-label" for="check-2">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
+                </div>
+                <button class="button button-form" type="submit">Отправить заявку</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div class="container"><img class="footer-img" src="img/images/qr.png" alt="QR-Code"/><a class="footer-link footer-link-email">ОТПРАВИТЬ E-MAIL</a><a class="footer-link">УСТАВ АНО РЦ CLEVER</a><a class="footer-link">Свидетельство о&nbsp;государственной регистрации</a><a class="footer-link">Свидетельство о&nbsp;постановке на&nbsp;налоговый учет</a>
+        <p class="footer-text">ОГРН</p>
+        <p class="footer-text">реквизиты</p>
+      </div>
+    </footer>
     <script src="js/libs.min.js"></script>
     <script src="js/scripts.min.js"></script>
   </body>
