--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
       </section>
       <section id="for">
         <div class="container">
-          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-grey.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-grey.svg"/>
             <h3>БЛАГОПОЛУЧАТЕЛИ</h3>
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Дети и молодые люди в возрасте от 15 – до 35 лет"/>
+              <div class="item item-2"><img class="item-img" src="img/icons/icon-blue.svg" alt="Дети и молодые люди в возрасте от 15 – до 35 лет"/>
                 <p class="item-text">Дети и молодые люди в возрасте от 15 – до 35 лет</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Сотрудники организаций некоммерческого сектора"/>
+              <div class="item item-2"><img class="item-img" src="img/icons/icon-blue.svg" alt="Сотрудники организаций некоммерческого сектора"/>
                 <p class="item-text">Сотрудники организаций некоммерческого сектора</p>
               </div>
             </div>
@@ -86,30 +86,26 @@
       </section>
       <section id="projects">
         <div class="container">
-          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-blue.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-blue.svg"/>
             <h3>ПРОЕКТЫ</h3>
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля."/>
+              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля."/>
                 <h4 class="item-title">CLEVER</h4>
                 <p class="item-text">Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля.</p>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи."/>
+              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи."/>
                 <h4 class="item-title">АЗБУКА ПУБЛИЧНЫХ КОММУНИКАЦИЙ</h4>
                 <p class="item-text">Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи.</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности."/>
+              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности."/>
                 <h4 class="item-title">«РАДОВАТЬСЯ И РАДОВАТЬ ДРУГИХ»</h4>
                 <p class="item-text">Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности.</p>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей."/>
+              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей."/>
                 <h4 class="item-title">«ФАНДРАЙЗИНГ НА КАБЛУЧКАХ»</h4>
                 <p class="item-text">Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей.</p>
               </div>
@@ -119,7 +115,7 @@
       </section>
       <section id="founders">
         <div class="container">
-          <div class="general-title"><img class="general-title-img" src="img/icons/title-icon-grey.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-grey.svg"/>
             <h3>УЧРЕДИТЕЛИ</h3>
           </div>
           <div class="row">
@@ -140,7 +136,7 @@
       </section>
       <section id="mail">
         <div class="container">
-          <div class="general-title general-title-white"><img class="general-title-img" src="img/icons/title-icon-white.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-white.svg"/>
             <h3>МЫ ВСЕГДА ОТКРЫТЫ ДЛЯ СОТРУДНИЧЕСТВА И ИНТЕРЕСНЫХ ПРЕДЛОЖЕНИЙ</h3>
           </div>
           <p class="mail-text">Задайте интересующие вопросы <br>и мы свяжемся в ближайшее время</p>
@@ -148,23 +144,23 @@
             <form class="form" action="" method="POST">
               <div class="radios">
                 <div class="radio">
-                  <input name="radio" id="radio-1" type="radio" value="">
+                  <input class="radio-dot" name="radio" id="radio-1" type="radio" value="" checked>
                   <label class="radio-label" for="radio-1">Сlever</label>
                 </div>
                 <div class="radio">
-                  <input name="radio" id="radio-2" type="radio" value="">
+                  <input class="radio-dot" name="radio" id="radio-2" type="radio" value="">
                   <label class="radio-label" for="radio-2">Азбука публичных коммуникаций</label>
                 </div>
                 <div class="radio">
-                  <input name="radio" id="radio-3" type="radio" value="">
+                  <input class="radio-dot" name="radio" id="radio-3" type="radio" value="">
                   <label class="radio-label" for="radio-3">Радоваться и радовать других</label>
                 </div>
                 <div class="radio">
-                  <input name="radio" id="radio-4" type="radio" value="">
-                  <label class="radio-label" for="radio-4">Фандрайзинг на&nbsp;каблучках</label>
+                  <input class="radio-dot" name="radio" id="radio-4" type="radio" value="">
+                  <label class="radio-label" for="radio-4">Фандрайзинг на каблучках</label>
                 </div>
                 <div class="radio">
-                  <input name="radio" id="radio-5" type="radio" value="">
+                  <input class="radio-dot" name="radio" id="radio-5" type="radio" value="">
                   <label class="radio-label" for="radio-5">Другое</label>
                 </div>
               </div>
@@ -172,12 +168,12 @@
                 <input class="input name" type="text" name="name" value="" placeholder="Ваше имя">
                 <input class="input email" type="text" name="email" value="" placeholder="e-mail">
                 <input class="input tel" type="tel" name="tel" value="" placeholder="Телефон ">
+                <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
               </div>
-              <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
               <div class="submits">
                 <div class="checking">
-                  <input class="check" type="checkbox" id="check-2">
-                  <label class="check-label" for="check-2">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
+                  <input class="check" type="checkbox" id="check-1">
+                  <label class="check-label" for="check-1">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
                 </div>
                 <button class="button button-form" type="submit">Отправить заявку</button>
               </div>
@@ -187,9 +183,13 @@
       </section>
     </div>
     <footer>
-      <div class="container"><img class="footer-img" src="img/images/qr.png" alt="QR-Code"/><a class="footer-link footer-link-email">ОТПРАВИТЬ E-MAIL</a><a class="footer-link">УСТАВ АНО РЦ CLEVER</a><a class="footer-link">Свидетельство о&nbsp;государственной регистрации</a><a class="footer-link">Свидетельство о&nbsp;постановке на&nbsp;налоговый учет</a>
-        <p class="footer-text">ОГРН</p>
-        <p class="footer-text">реквизиты</p>
+      <div class="container"><img class="footer-img" src="img/images/qr.png" alt="QR-Code"/>
+        <p class="footer-text"><a class="footer-link footer-link-email" href="#mail">ОТПРАВИТЬ E-MAIL</a></p>
+        <p class="footer-text"><a class="footer-link" href="docs/regulation.pdf" target="_blank">УСТАВ АНО РЦ CLEVER</a></p>
+        <p class="footer-text"><a class="footer-link" href="docs/registration.pdf" target="_blank">Свидетельство о государственной регистрации</a></p>
+        <p class="footer-text"><a class="footer-link" href="docs/accounting.pdf" target="_blank">Свидетельство о постановке на налоговый учет</a></p>
+        <p class="footer-text"><a class="footer-link" href="docs/ogrn.pdf" target="_blank">ОГРН</a></p>
+        <p class="footer-text"><a class="footer-link" href="docs/requisites.pdf" target="_blank">Реквизиты</a></p>
       </div>
     </footer>
     <script src="js/libs.min.js"></script>
