Main page is adapted

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
   <body>
     <div class="wrapper">
       <section id="main">
-        <div class="container"><img class="main-logo" src="img/logo-main.svg" alt="Логотип"/>
-          <h1 class="main-title"><span>МИССИЯ АНО РЦ «КЛЕВЕР»</span>РАЗВИВАЯ ВЫСШИЕ ПСИХИЧЕСКИЕ ФУНКЦИИ У ДЕТЕЙ И МОЛОДЕЖИ, СОЗДАВАТЬ ОСНОВУ ДЛЯ БУДУЩЕГО</h1>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)"/>
-                <p class="item-text">Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)</p>
+        <div class="container">
+          <div class="content"><img class="main-img" src="img/backs/main.png" alt="Облако"/><img class="main-logo" src="img/logo-main.svg" alt="Логотип"/>
+            <h1 class="main-title"><span>МИССИЯ АНО РЦ «КЛЕВЕР»</span>РАЗВИВАЯ ВЫСШИЕ ПСИХИЧЕСКИЕ ФУНКЦИИ У ДЕТЕЙ И МОЛОДЕЖИ, СОЗДАВАТЬ ОСНОВУ ДЛЯ БУДУЩЕГО</h1>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)"/>
+                  <p class="item-text">Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)</p>
+                </div>
               </div>
-            </div>
-            <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»"/>
-                <p class="item-text">Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»</p>
+              <div class="col-md-6">
+                <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»"/>
+                  <p class="item-text">Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»</p>
+                </div>
               </div>
             </div>
           </div>
@@ -140,45 +142,44 @@
             <h3>МЫ ВСЕГДА ОТКРЫТЫ ДЛЯ СОТРУДНИЧЕСТВА И ИНТЕРЕСНЫХ ПРЕДЛОЖЕНИЙ</h3>
           </div>
           <p class="mail-text">Задайте интересующие вопросы <br>и мы свяжемся в ближайшее время</p>
-          <div class="form">
-            <form class="form" action="" method="POST">
-              <div class="radios">
-                <div class="radio">
-                  <input class="radio-dot" name="radio" id="radio-1" type="radio" value="" checked>
-                  <label class="radio-label" for="radio-1">Сlever</label>
-                </div>
-                <div class="radio">
-                  <input class="radio-dot" name="radio" id="radio-2" type="radio" value="">
-                  <label class="radio-label" for="radio-2">Азбука публичных коммуникаций</label>
-                </div>
-                <div class="radio">
-                  <input class="radio-dot" name="radio" id="radio-3" type="radio" value="">
-                  <label class="radio-label" for="radio-3">Радоваться и радовать других</label>
-                </div>
-                <div class="radio">
-                  <input class="radio-dot" name="radio" id="radio-4" type="radio" value="">
-                  <label class="radio-label" for="radio-4">Фандрайзинг на каблучках</label>
-                </div>
-                <div class="radio">
-                  <input class="radio-dot" name="radio" id="radio-5" type="radio" value="">
-                  <label class="radio-label" for="radio-5">Другое</label>
-                </div>
+          <form class="form form" action="" method="POST">
+            <div class="radios">
+              <div class="radio">
+                <input class="radio-dot" name="radio" id="radio-1" type="radio" value="" checked>
+                <label class="radio-label" for="radio-1">Сlever</label>
               </div>
-              <div class="inputs">
-                <input class="input name" type="text" name="name" value="" placeholder="Ваше имя">
-                <input class="input email" type="text" name="email" value="" placeholder="e-mail">
-                <input class="input tel" type="tel" name="tel" value="" placeholder="Телефон ">
-                <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
+              <div class="radio">
+                <input class="radio-dot" name="radio" id="radio-2" type="radio" value="">
+                <label class="radio-label" for="radio-2">Азбука публичных коммуникаций</label>
               </div>
-              <div class="submits">
-                <div class="checking">
-                  <input class="check" type="checkbox" id="check-1">
-                  <label class="check-label" for="check-1">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
-                </div>
-                <button class="button button-form" type="submit">Отправить заявку</button>
+              <div class="radio">
+                <input class="radio-dot" name="radio" id="radio-3" type="radio" value="">
+                <label class="radio-label" for="radio-3">Радоваться и радовать других</label>
               </div>
-            </form>
-          </div>
+              <div class="radio">
+                <input class="radio-dot" name="radio" id="radio-4" type="radio" value="">
+                <label class="radio-label" for="radio-4">Фандрайзинг на каблучках</label>
+              </div>
+              <div class="radio">
+                <input class="radio-dot" name="radio" id="radio-5" type="radio" value="">
+                <label class="radio-label" for="radio-5">Другое</label>
+              </div>
+            </div>
+            <div class="inputs">
+              <input class="input input-name" type="text" name="name" value="" placeholder="Ваше имя">
+              <input class="input input-mail" type="text" name="email" value="" placeholder="e-mail">
+              <input class="input input-tel" type="tel" name="tel" value="" placeholder="Телефон ">
+              <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
+            </div>
+            <p class="alert-message"></p>
+            <div class="submits">
+              <div class="checking">
+                <input class="check" type="checkbox" id="check-1">
+                <label class="check-label" for="check-1">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
+              </div>
+              <button class="button button-form" type="submit">Отправить заявку</button>
+            </div>
+          </form>
         </div>
       </section>
     </div>
