Mail is connected

--- a/index.html
+++ b/index.html
@@ -142,33 +142,33 @@
             <h3>МЫ ВСЕГДА ОТКРЫТЫ ДЛЯ СОТРУДНИЧЕСТВА И ИНТЕРЕСНЫХ ПРЕДЛОЖЕНИЙ</h3>
           </div>
           <p class="mail-text">Задайте интересующие вопросы <br>и мы свяжемся в ближайшее время</p>
-          <form class="form form" action="" method="POST">
+          <form class="form form" action="send.php" method="POST">
             <div class="radios">
               <div class="radio">
-                <input class="radio-dot" name="radio" id="radio-1" type="radio" value="" checked>
+                <input class="radio-dot" name="radio" id="radio-1" type="radio" value="Сlever" checked>
                 <label class="radio-label" for="radio-1">Сlever</label>
               </div>
               <div class="radio">
-                <input class="radio-dot" name="radio" id="radio-2" type="radio" value="">
+                <input class="radio-dot" name="radio" id="radio-2" type="radio" value="Азбука публичных коммуникаций">
                 <label class="radio-label" for="radio-2">Азбука публичных коммуникаций</label>
               </div>
               <div class="radio">
-                <input class="radio-dot" name="radio" id="radio-3" type="radio" value="">
+                <input class="radio-dot" name="radio" id="radio-3" type="radio" value="Радоваться и радовать других">
                 <label class="radio-label" for="radio-3">Радоваться и радовать других</label>
               </div>
               <div class="radio">
-                <input class="radio-dot" name="radio" id="radio-4" type="radio" value="">
+                <input class="radio-dot" name="radio" id="radio-4" type="radio" value="Фандрайзинг на каблучках">
                 <label class="radio-label" for="radio-4">Фандрайзинг на каблучках</label>
               </div>
               <div class="radio">
-                <input class="radio-dot" name="radio" id="radio-5" type="radio" value="">
+                <input class="radio-dot" name="radio" id="radio-5" type="radio" value="Другое">
                 <label class="radio-label" for="radio-5">Другое</label>
               </div>
             </div>
             <div class="inputs">
-              <input class="input input-name" type="text" name="name" value="" placeholder="Ваше имя">
-              <input class="input input-mail" type="text" name="email" value="" placeholder="e-mail">
-              <input class="input input-tel" type="tel" name="tel" value="" placeholder="Телефон ">
+              <input class="input input-name" type="text" name="name" placeholder="Ваше имя">
+              <input class="input input-mail" type="text" name="email" placeholder="e-mail">
+              <input class="input input-tel" type="tel" name="tel" placeholder="Телефон ">
               <textarea class="form-textarea" name="textarea" placeholder="Сообщение"></textarea>
             </div>
             <p class="alert-message"></p>
