Main page is optimized

--- a/index.html
+++ b/index.html
@@ -19,18 +19,22 @@
     <div class="wrapper">
       <section id="main">
         <div class="container">
-          <div class="content"><img class="main-img" src="img/backs/main.png" alt="Облако"/><img class="main-logo" src="img/logo-main.svg" alt="Логотип"/>
+          <div class="content">
+            <picture class="main-img">
+              <source srcset="img/backs/main-mob.webp  " type="image/webp" alt="Облако" media="(max-width: 560px)">
+              <source srcset="img/backs/main-mob.png  " type="image/png" alt="Облако" media="(max-width: 560px)"><img src="img/backs/main.webp" alt="Облако"/>
+            </picture><img class="main-logo" src="img/logo-main.svg" alt="Логотип"/>
             <h1 class="main-title"><span>МИССИЯ АНО РЦ «КЛЕВЕР»</span>РАЗВИВАЯ ВЫСШИЕ ПСИХИЧЕСКИЕ ФУНКЦИИ У ДЕТЕЙ И МОЛОДЕЖИ, СОЗДАВАТЬ ОСНОВУ ДЛЯ БУДУЩЕГО</h1>
-            <div class="row">
-              <div class="col-md-6">
-                <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)"/>
-                  <p class="item-text">Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)</p>
-                </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)"/>
+                <p class="item-text">Основной глобальный ориентир - Цель устойчивого развития ООН до 2030г №4 – «Качественное образование» (Обеспечение всеохватного и справедливого качественного образования, поощрение возможности обучения на протяжении всей жизни для всех)</p>
               </div>
-              <div class="col-md-6">
-                <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»"/>
-                  <p class="item-text">Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»</p>
-                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="item"><img class="item-img" src="img/icons/icon-blue.svg" alt="Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»"/>
+                <p class="item-text">Основной национальный ориентир - Национальная цель России до 2024г №2 – «Возможности для самореализации и развития талантов». Национальные проекты России «Образование» и «Культура»</p>
               </div>
             </div>
           </div>
@@ -69,7 +73,7 @@
       </section>
       <section id="for">
         <div class="container">
-          <div class="general-title"><img src="img/icons/title-icon-grey.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-grey.svg" alt="alt"/>
             <h3>БЛАГОПОЛУЧАТЕЛИ</h3>
           </div>
           <div class="row">
@@ -88,7 +92,7 @@
       </section>
       <section id="projects">
         <div class="container">
-          <div class="general-title"><img src="img/icons/title-icon-blue.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-blue.svg" alt="alt"/>
             <h3>ПРОЕКТЫ</h3>
           </div>
           <div class="row">
@@ -117,18 +121,26 @@
       </section>
       <section id="founders">
         <div class="container">
-          <div class="general-title"><img src="img/icons/title-icon-grey.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-grey.svg" alt="alt"/>
             <h3>УЧРЕДИТЕЛИ</h3>
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="founder"><img class="founder-img" src="img/images/marfa.png" alt="Марфа Мудрова"/>
+              <div class="founder">
+                <picture class="founder-img">
+                  <source srcset="img/images/marfa.webp" type="image/webp" alt="Марфа Мудрова">
+                  <source srcset="img/images/marfa.png" type="image/png" alt="Марфа Мудрова"><img src="img/images/marfa.webp" alt="Марфа Мудрова"/>
+                </picture>
                 <h4 class="founder-title">Марфа Мудрова</h4>
                 <p class="founder-text">директор, <br>руководитель проекта CLEVER</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="founder"><img class="founder-img" src="img/images/ilya.png" alt="Илья Мясников"/>
+              <div class="founder">
+                <picture class="founder-img">
+                  <source srcset="img/images/ilya.webp" type="image/webp" alt="Илья Мясников">
+                  <source srcset="img/images/ilya.png" type="image/png" alt="Илья Мясников"><img src="img/images/ilya.webp" alt="Илья Мясников"/>
+                </picture>
                 <h4 class="founder-title">Илья Мясников</h4>
                 <p class="founder-text">продюсер, руководитель проекта АЗБУКА ПУБЛИЧНЫХ КОММУНИКАЦИЙ</p>
               </div>
@@ -138,7 +150,7 @@
       </section>
       <section id="mail">
         <div class="container">
-          <div class="general-title"><img src="img/icons/title-icon-white.svg"/>
+          <div class="general-title"><img src="img/icons/title-icon-white.svg" alt="alt"/>
             <h3>МЫ ВСЕГДА ОТКРЫТЫ ДЛЯ СОТРУДНИЧЕСТВА И ИНТЕРЕСНЫХ ПРЕДЛОЖЕНИЙ</h3>
           </div>
           <p class="mail-text">Задайте интересующие вопросы <br>и мы свяжемся в ближайшее время</p>
@@ -184,7 +196,11 @@
       </section>
     </div>
     <footer>
-      <div class="container"><img class="footer-img" src="img/images/qr.png" alt="QR-Code"/>
+      <div class="container">
+        <picture class="footer-img">
+          <source srcset="img/images/qr.webp" type="image/webp" alt="QR-Code">
+          <source srcset="img/images/qr.png" type="image/png" alt="QR-Code"><img src="img/images/qr.webp" alt="QR-Code"/>
+        </picture>
         <p class="footer-text"><a class="footer-link footer-link-email" href="#mail">ОТПРАВИТЬ E-MAIL</a></p>
         <p class="footer-text"><a class="footer-link" href="docs/regulation.pdf" target="_blank">УСТАВ АНО РЦ CLEVER</a></p>
         <p class="footer-text"><a class="footer-link" href="docs/registration.pdf" target="_blank">Свидетельство о государственной регистрации</a></p>
