--- a/index.html
+++ b/index.html
@@ -47,24 +47,24 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады"/>
+              <div class="item item-480"><img class="item-img" src="img/icons/icon-white.svg" alt="проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады"/>
                 <p class="item-text">проводим групповые и индивидуальные занятия, семинары и конкурсы, круглые столы и конференции, игры и олимпиады</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников"/>
+              <div class="item item-480"><img class="item-img" src="img/icons/icon-white.svg" alt="осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников"/>
                 <p class="item-text">осуществляем экспертное психолого-педагогическое консультирование родителей (законных представителей) и педагогических работников</p>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи"/>
+              <div class="item item-480"><img class="item-img" src="img/icons/icon-white.svg" alt="оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи"/>
                 <p class="item-text">оказываем содействие добровольчеству и проектам популяризации всестороннего развития потенциала детей и молодежи</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="item"><img class="item-img" src="img/icons/icon-white.svg" alt="организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников"/>
+              <div class="item item-480"><img class="item-img" src="img/icons/icon-white.svg" alt="организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников"/>
                 <p class="item-text">организуем просветительские мероприятия для представителей НКО с целью развития НКО-сектора и повышения компетентности его участников</p>
               </div>
             </div>
@@ -78,12 +78,12 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item item-2"><img class="item-img" src="img/icons/icon-blue.svg" alt="Дети и молодые люди в возрасте от 15 – до 35 лет"/>
+              <div class="item item-2 item-485"><img class="item-img" src="img/icons/icon-blue.svg" alt="Дети и молодые люди в возрасте от 15 – до 35 лет"/>
                 <p class="item-text">Дети и молодые люди в возрасте от 15 – до 35 лет</p>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="item item-2"><img class="item-img" src="img/icons/icon-blue.svg" alt="Сотрудники организаций некоммерческого сектора"/>
+              <div class="item item-2 item-485"><img class="item-img" src="img/icons/icon-blue.svg" alt="Сотрудники организаций некоммерческого сектора"/>
                 <p class="item-text">Сотрудники организаций некоммерческого сектора</p>
               </div>
             </div>
@@ -97,22 +97,22 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля."/>
+              <div class="item item-455 item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля."/>
                 <h4 class="item-title">CLEVER</h4>
                 <p class="item-text">Модульная программа обучения для развития Высших психических функций: память, внимание, мышление, речь, ощущения, восприятие, эмоции, воля.</p>
               </div>
-              <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи."/>
+              <div class="item item-455 item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи."/>
                 <h4 class="item-title">АЗБУКА ПУБЛИЧНЫХ КОММУНИКАЦИЙ</h4>
                 <p class="item-text">Практический курс формирования и развития навыков публичных выступлений, общения с аудиторией, самопрезентации, презентации проекта или идеи.</p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности."/>
-                <h4 class="item-title">«РАДОВАТЬСЯ И РАДОВАТЬ ДРУГИХ»</h4>
+                <h4 class="item-title">«РАДОВАТЬСЯ <br>И РАДОВАТЬ ДРУГИХ»</h4>
                 <p class="item-text">Мастер-практикум для тех, кто подвержен постоянному профессиональному стрессу и эмоциональному выгоранию. Позволяет взять эмоции под контроль и войти в ресурсное состояние для дальнейшей благотворительной деятельности.</p>
               </div>
               <div class="item item-blue"><img class="item-img" src="img/icons/icon-blue.svg" alt="Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей."/>
-                <h4 class="item-title">«ФАНДРАЙЗИНГ НА КАБЛУЧКАХ»</h4>
+                <h4 class="item-title">«ФАНДРАЙЗИНГ <br>НА КАБЛУЧКАХ»</h4>
                 <p class="item-text">Курс-погружение в технологию и мастерство ведения переговоров с учетом гендерных особенностей сторон. Для тех, кто осуществляет профессиональную коммуникацию в процессе фандрайзинга и привлекает средства и ресурсы для благотворительных целей.</p>
               </div>
             </div>
