--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="submits">
               <div class="checking">
                 <input class="check" type="checkbox" id="check-1">
-                <label class="check-label" for="check-1">Я принимаю <a href="" target="_blank">условия</a> передачи информации</label>
+                <label class="check-label" for="check-1">Я принимаю <a href="docs/conds.pdf" target="_blank">условия</a> передачи информации</label>
               </div>
               <button class="button button-form" type="submit">Отправить заявку</button>
             </div>
